--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,14 @@ header nav a:hover {
     border-radius: 5px;
 }
 
+
+#Project-krapyak{
+    width: 600px;
+    height: 280px;
+    margin: 30px;
+    border-radius: 5px;
+}
+
 /* hover to pic and style */
 #Horiseon:hover{
     transform: scale(1.05);
@@ -218,6 +226,13 @@ header nav a:hover {
     transition: 1.5s;
     box-shadow: 5px 5px 8px var(--black);
 }
+
+#Project-krapyak:hover{
+    transform: scale(1.05);
+    transition: 1.5s;
+    box-shadow: 5px 5px 8px var(--black);
+}
+
 /* section work-of-mine ends here */
 
 /* footer starts here */
@@ -287,6 +302,13 @@ footer a:hover{
         font-size: large;
         margin-left: 35px;
         margin-right: 30px;
+    }
+
+    #Project-krapyak{
+        width: 450px;
+        height: 200px;
+        margin: 30px;
+        border-radius: 5px;
     }
 
 }
