--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,8 @@
     --blue3: #5C8FFF;
     --blue4: #2167FF;
     --blue5: #0051FF;
-    --black:#000000;
-    --border-style:10px solid var(--blue); 
+    --black: #000000;
+    --border-style: 10px solid var(--blue);
 }
 
 /* Universal slector in CSS which sets the defult value*/
@@ -22,11 +22,11 @@
 /* body style */
 body {
     background-color: var(--gray);
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: var(--white);
-  }
+}
 
-  /* header starts here */
+/* header starts here */
 header {
     padding: 40px;
     color: var(--blue);
@@ -49,16 +49,16 @@ header h1 {
     text-align: center;
     /* my text distance from border */
     padding: 30px;
-    margin:50px;
+    margin: 50px;
     font-weight: 800;
-    border:var(--border-style);
+    border: var(--border-style);
     /* radius of border edge */
     border-radius: 10px;
 }
 
 /* style when cursor hover on my name*/
 header h1:hover {
-    animation:  shake-myname 1s;
+    animation: shake-myname 1s;
     /* how many times the aniamtion works */
     animation-iteration-count: infinite;
     /* deirection alternate means it plays forward and backward each time*/
@@ -69,20 +69,64 @@ header h1:hover {
 
 /*animation movement rule of header h1*/
 @keyframes shake-myname {
+
     /* % indicate the stage of the animation movement,I set 11 different stages in this case, 
     scale is the new size of the content, translate indecate the move along the axies*/
-    0% { transform: scale(1.15) translate(1px, 2px) rotate(0deg); color:var(--blue1);}
-    10% { transform: scale(1.15) translate(-1px, -1px) rotate(-1deg); color:var(--blue1);}
-    20% { transform: scale(1.15) translate(-3px, 0px) rotate(1deg); color:var(--blue2);}
-    30% { transform: scale(1.15) translate(3px, 1px) rotate(0deg); color:var(--blue2);}
-    40% { transform: scale(1.15) translate(1px, -2px) rotate(1deg); color:var(--blue3);}
-    50% { transform: scale(1.15) translate(-1px, 1px) rotate(-1deg); color:var(--blue3);}
-    60% { transform: scale(1.15) translate(-3px, -2px) rotate(0deg); color:var(--blue4);}
-    70% { transform: scale(1.15) translate(3px, 1px) rotate(-1deg); color:var(--blue4);}
-    80% { transform: scale(1.15) translate(-1px, -0px) rotate(1deg); color:var(--blue5);}
-    90% { transform: scale(1.15) translate(1px, -1px) rotate(0deg); color:var(--blue5);}
-    100% { transform: scale(1.15) translate(1px, 2px) rotate(-1deg); color:var(--blue5);}
-  }
+    0% {
+        transform: scale(1.15) translate(1px, 2px) rotate(0deg);
+        color: var(--blue1);
+    }
+
+    10% {
+        transform: scale(1.15) translate(-1px, -1px) rotate(-1deg);
+        color: var(--blue1);
+    }
+
+    20% {
+        transform: scale(1.15) translate(-3px, 0px) rotate(1deg);
+        color: var(--blue2);
+    }
+
+    30% {
+        transform: scale(1.15) translate(3px, 1px) rotate(0deg);
+        color: var(--blue2);
+    }
+
+    40% {
+        transform: scale(1.15) translate(1px, -2px) rotate(1deg);
+        color: var(--blue3);
+    }
+
+    50% {
+        transform: scale(1.15) translate(-1px, 1px) rotate(-1deg);
+        color: var(--blue3);
+    }
+
+    60% {
+        transform: scale(1.15) translate(-3px, -2px) rotate(0deg);
+        color: var(--blue4);
+    }
+
+    70% {
+        transform: scale(1.15) translate(3px, 1px) rotate(-1deg);
+        color: var(--blue4);
+    }
+
+    80% {
+        transform: scale(1.15) translate(-1px, -0px) rotate(1deg);
+        color: var(--blue5);
+    }
+
+    90% {
+        transform: scale(1.15) translate(1px, -1px) rotate(0deg);
+        color: var(--blue5);
+    }
+
+    100% {
+        transform: scale(1.15) translate(1px, 2px) rotate(-1deg);
+        color: var(--blue5);
+    }
+}
 
 /* setting nav bar section into flexbox, and setting the style*/
 header nav {
@@ -90,7 +134,7 @@ header nav {
     flex-wrap: wrap;
     /* make boxes horizontally sitting */
     flex-direction: row;
-    justify-content:space-between;
+    justify-content: space-between;
     list-style-type: none;
     align-items: center;
 }
@@ -109,31 +153,31 @@ header nav a {
 /* cursor hover to nav bar and showing style*/
 header nav a:hover {
     background-color: var(--gray);
-    border-style:inherit;
+    border-style: inherit;
     border-radius: 5px;
 }
 
 /*style of every section's title*/
-#side-text{
+#side-text {
     /* set blue line on the right and top border */
-    border-right:var(--border-style);
-    border-top:var(--border-style);
-    text-align: right;   
+    border-right: var(--border-style);
+    border-top: var(--border-style);
+    text-align: right;
     padding-right: 10px;
     /* keep width to 20% and keep two side text at same location*/
     min-width: 20%;
     max-width: 20%;
-    
+
 }
 
 /* about me starts */
 /* set flex to this section */
-.About-me{
+.About-me {
     display: flex;
 }
 
 /*putting about me pargrah and my photo into another flex and setting style*/
-#pic-and-pargragh{
+#pic-and-pargragh {
     background-image: url(../images/black-concrete-wall.jpg);
     display: flex;
     height: auto;
@@ -147,11 +191,11 @@ header nav a:hover {
 
 /* style of my photo */
 #photo-of-mine {
-    max-width: 300px;  
+    max-width: 300px;
     max-height: 400px;
     border-radius: 5%;
-    margin:30px;
-    
+    margin: 30px;
+
 }
 
 /* cursor hover to my photo and change style */
@@ -164,22 +208,23 @@ header nav a:hover {
 
 /* style of text in paragraph */
 .About-me p {
-    margin:20px;
+    margin: 20px;
     /* empty space before text */
     text-indent: 30px;
     /* each line of paragraph space */
-    line-height: 150%;   
+    line-height: 150%;
 }
+
 /* about me ends */
 
 /* second section work-of-mine starts*/
 /* set this section to flex */
-.work-of-mine{
+.work-of-mine {
     display: flex;
 }
 
 /* put two pictures in flex and setting style */
-#project-link-and-pic{
+#project-link-and-pic {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -191,15 +236,15 @@ header nav a:hover {
 
 
 /* picture of the work style */
-#Horiseon{
-    width: 450px; 
+#Horiseon {
+    width: 450px;
     height: 600px;
     margin: 30px;
     border-radius: 5px;
 }
 
 /* same style with last picture */
-#prework{
+#prework {
     width: 450px;
     height: 600px;
     margin: 30px;
@@ -207,7 +252,14 @@ header nav a:hover {
 }
 
 
-#Project-krapyak{
+#Project-krapyak {
+    width: 600px;
+    height: 280px;
+    margin: 30px;
+    border-radius: 5px;
+}
+
+#Project-cv-letter {
     width: 600px;
     height: 280px;
     margin: 30px;
@@ -215,19 +267,25 @@ header nav a:hover {
 }
 
 /* hover to pic and style */
-#Horiseon:hover{
+#Horiseon:hover {
     transform: scale(1.05);
     transition: 1.5s;
     box-shadow: 5px 5px 8px var(--black);
 }
 
-#prework:hover{
+#prework:hover {
     transform: scale(1.05);
     transition: 1.5s;
     box-shadow: 5px 5px 8px var(--black);
 }
 
-#Project-krapyak:hover{
+#Project-krapyak:hover {
+    transform: scale(1.05);
+    transition: 1.5s;
+    box-shadow: 5px 5px 8px var(--black);
+}
+
+#Project-cv-letter:hover {
     transform: scale(1.05);
     transition: 1.5s;
     box-shadow: 5px 5px 8px var(--black);
@@ -237,7 +295,7 @@ header nav a:hover {
 
 /* footer starts here */
 /* footer style */
-footer{
+footer {
     /* backgroud-image */
     background-image: url(../images/many-blank-business-cards.jpg);
     display: flex;
@@ -247,11 +305,11 @@ footer{
 }
 
 /* a liite different style of the title of the footer */
-#side-text-footer{
+#side-text-footer {
     /* added border top soild color,this is the 
     different from the title of the last two sections */
     border-right: var(--border-style);
-    text-align: right;   
+    text-align: right;
     padding-right: 10px;
     /* keep width to 20% */
     width: 20%;
@@ -261,7 +319,7 @@ footer{
 }
 
 /* put four ways contact info in to flex */
-#contact-info{
+#contact-info {
     width: 80%;
     color: var(--black);
     display: flex;
@@ -270,7 +328,7 @@ footer{
 }
 
 /* links in footer style*/
-footer a{
+footer a {
     margin: 20px;
     padding: 10px;
     font-size: 20px;
@@ -280,16 +338,18 @@ footer a{
     text-decoration: none;
 }
 
-footer a:hover{
+footer a:hover {
     background-color: var(--gray);
     border-radius: 5px;
 }
+
 /* footer ends */
 
 /* for tablet screen view*/
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
+
     /* setting picture and pargragh  */
-    #pic-and-pargragh{
+    #pic-and-pargragh {
         /* make it flex wrap */
         flex-wrap: wrap;
         /* let pargragh under my picture */
@@ -297,44 +357,51 @@ footer a:hover{
     }
 
     /* differnt style of paragragh */
-    .About-me p{
+    .About-me p {
         line-height: 35px;
         font-size: large;
         margin-left: 35px;
         margin-right: 30px;
     }
 
-    #Project-krapyak{
+    #Project-krapyak {
         width: 450px;
         height: 200px;
         margin: 30px;
         border-radius: 5px;
     }
 
+    #Project-cv-letter {
+        width: 450px;
+        height: 200px;
+        margin: 30px;
+        border-radius: 5px;
+    }
 }
 
 /* for smart-phone view*/
-@media screen and (max-width: 575px){
+@media screen and (max-width: 575px) {
+
     /* change font size of my name at header */
-    header h1{
+    header h1 {
         font-size: 25px;
     }
-    
+
     /* change nav bar style */
-    header nav a{
+    header nav a {
         font-size: 8px;
         padding: 2px;
     }
-    
+
     /* change first section flex*/
-    .About-me{
+    .About-me {
         flex-direction: column;
         background-image: url(../images/black-concrete-wall.jpg);
         text-align: center;
     }
-    
+
     /* move side text from left to top and re-style */
-    #side-text{
+    #side-text {
         font-size: 10px;
         /* remove boder right soild line */
         border-right: none;
@@ -342,13 +409,13 @@ footer a:hover{
         min-width: none;
         max-width: none;
         /* let text in center */
-        text-align: center; 
+        text-align: center;
         /* remove right padding*/
-        padding-right: 0px; 
+        padding-right: 0px;
     }
-    
+
     /*picture and pargragh re-style*/
-    #pic-and-pargragh{
+    #pic-and-pargragh {
         /* no more 20% at left for side text */
         width: 100%;
         /* remove top border line */
@@ -356,17 +423,17 @@ footer a:hover{
     }
 
     /* font size change for pargragh */
-    .About-me p{
+    .About-me p {
         font-size: 8px;
     }
-    
+
     /* change section 2 flex direction */
-    .work-of-mine{
+    .work-of-mine {
         flex-direction: column;
     }
-    
+
     /*project lin and picture re-style */
-    #project-link-and-pic{
+    #project-link-and-pic {
         border-top: none;
         /* no more side text in left as well */
         width: 100%;
@@ -374,40 +441,51 @@ footer a:hover{
     }
 
     /* picture resize */
-    #Horiseon{
+    #Horiseon {
         max-height: 200px;
         width: auto;
+
     }
 
     /* picture resize */
-    #prework{
+    #prework {
         width: 150px;
         height: 200px;
     }
 
+    #Project-krapyak {
+        width: 200px;
+        height: 150px;
+    }
+
+    #Project-cv-letter {
+        width: 200px;
+        height: 150px;
+    }
+
     /* footer-restyle */
-    footer{
+    footer {
         /*same as last two sections*/
         flex-direction: column;
         align-items: center;
     }
 
     /* same as side text*/
-    #side-text-footer{
+    #side-text-footer {
         font-size: 10px;
         border-right: none;
         border-top: none;
     }
 
     /* four contact info style */
-    #contact-info{
+    #contact-info {
         /* no more side-text-footer on the left */
         width: 100%;
         justify-content: space-around;
     }
 
     /* text style change for four contact */
-    footer a{
+    footer a {
         font-size: 8px;
         margin: 5px;
     }
