--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,15 +225,26 @@ header nav a:hover {
 
 /* put two pictures in flex and setting style */
 #project-link-and-pic {
-    display: flex;
+
+    /* display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
     /* side text takes another 20% */
     width: 80%;
     justify-content: space-around;
     border-top: var(--border-style);
 }
 
+.project-box {
+    border: 1px solid white;
+    /* 添加白色边框 */
+    padding: 15px;
+    /* 添加内边距 */
+    margin: 10px;
+    /* 添加外边距 */
+    border-radius: 5px;
+    /* 添加圆角 */
+}
 
 /* picture of the work style */
 #Horiseon {
@@ -379,8 +390,9 @@ footer a:hover {
     }
 }
 
+
 /* for smart-phone view*/
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 732px) {
 
     /* change font size of my name at header */
     header h1 {
